<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="BG IMAGE"
        android:scaleType="centerCrop"
        android:src="@drawable/walp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/DownloadButton"
            android:layout_width="match_parent"
            android:layout_height="250px"
            android:layout_marginBottom="40px"
            android:background="@drawable/round_rectangle_gray"
            android:clickable="true"
            android:clipToOutline="true"
            android:orientation="horizontal"
            app:layout_constraintHeight_percent="0.12"
            tools:ignore="PxUsage">

            <ImageView
                android:id="@+id/DownloadImage"
                android:layout_width="150px"
                android:layout_height="match_parent"
                android:contentDescription="Win11 logo"
                android:padding="25px"
                android:src="@drawable/download"
                tools:ignore="HardcodedText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/DownloadLabel"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/download_label"
                    android:textColor="@color/white"
                    android:textSize="36px"
                    android:textStyle="bold"
                    tools:ignore="PxUsage" />

                <TextView
                    android:id="@+id/DownloadDescription"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/download_description"
                    android:textColor="@color/light_gray"
                    android:textSize="32px"
                    android:textStyle="italic"
                    tools:ignore="PxUsage" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/BackupBootButton"
            android:layout_width="match_parent"
            android:layout_height="250px"
            android:layout_marginBottom="40px"
            android:background="@drawable/round_rectangle_gray"
            android:clickable="true"
            android:clipToOutline="true"
            android:orientation="horizontal"
            app:layout_constraintHeight_percent="0.12"
            tools:ignore="PxUsage">

            <ImageView
                android:id="@+id/BackupBootImage"
                android:layout_width="150px"
                android:layout_height="match_parent"
                android:contentDescription="Win11 logo"
                android:padding="25px"
                android:src="@drawable/cd"
                tools:ignore="HardcodedText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/BackupBootLabel"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/backup_boot_image"
                    android:textColor="@color/white"
                    android:textSize="36px"
                    android:textStyle="bold"
                    tools:ignore="PxUsage" />

                <TextView
                    android:id="@+id/BackupBootDescription"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/backup_boot_image_description"
                    android:textColor="@color/light_gray"
                    android:textSize="32px"
                    android:textStyle="italic"
                    tools:ignore="PxUsage" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/InstallWindowsButton"
            android:layout_width="match_parent"
            android:layout_height="250px"

            android:layout_marginBottom="40px"
            android:background="@drawable/round_rectangle_gray"
            android:clickable="true"
            android:clipToOutline="true"
            android:orientation="horizontal"
            app:layout_constraintHeight_percent="0.12"
            tools:ignore="PxUsage">

            <ImageView
                android:id="@+id/InstallWindowsImage"
                android:layout_width="150px"
                android:layout_height="wrap_content"
                android:contentDescription="Win11 logo"
                android:padding="25px"
                android:src="@drawable/installer"
                tools:ignore="HardcodedText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/InstallWindowsLabel"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/install_windows"
                    android:textColor="@color/white"
                    android:textSize="36px"
                    android:textStyle="bold"
                    tools:ignore="PxUsage" />

                <TextView
                    android:id="@+id/InstallWindowsDescription"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/install_windows_description"
                    android:textColor="@color/light_gray"
                    android:textSize="32px"
                    android:textStyle="italic"
                    tools:ignore="PxUsage" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/MountWindowsButton"
            android:layout_width="match_parent"
            android:layout_height="250px"

            android:layout_marginBottom="40px"
            android:background="@drawable/round_rectangle_gray"
            android:clickable="true"
            android:clipToOutline="true"
            android:orientation="horizontal"
            app:layout_constraintHeight_percent="0.12"
            tools:ignore="PxUsage">

            <ImageView
                android:id="@+id/MountWindowsImage"
                android:layout_width="150px"
                android:layout_height="wrap_content"
                android:contentDescription="Win11 logo"
                android:padding="35px"
                android:src="@drawable/folder"
                tools:ignore="HardcodedText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/MountWindowsLabel"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/mount_windows"
                    android:textColor="@color/white"
                    android:textSize="36px"
                    android:textStyle="bold"
                    tools:ignore="PxUsage" />

                <TextView
                    android:id="@+id/MountWindowsDescription"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/mount_windows_description"
                    android:textColor="@color/light_gray"
                    android:textSize="32px"
                    android:textStyle="italic"
                    tools:ignore="PxUsage" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/BootIntoWindowsButton"
            android:layout_width="match_parent"
            android:layout_height="250px"

            android:background="@drawable/round_rectangle_gray"
            android:clickable="true"
            android:clipToOutline="true"
            android:orientation="horizontal"
            app:layout_constraintHeight_percent="0.12"
            tools:ignore="PxUsage">

            <ImageView
                android:id="@+id/BootIntoWindowsImage"
                android:layout_width="150px"
                android:layout_height="wrap_content"
                android:contentDescription="Win11 logo"
                android:padding="35px"
                android:src="@drawable/win11logo"
                tools:ignore="HardcodedText,PxUsage" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/BootIntoWindowsLabel"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/boot_to_windows"
                    android:textColor="@color/white"
                    android:textSize="36px"
                    android:textStyle="bold"
                    tools:ignore="PxUsage" />

                <TextView
                    android:id="@+id/BootIntoWindowsDescription"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/boot_to_windows_description"
                    android:textColor="@color/light_gray"
                    android:textSize="32px"
                    android:textStyle="italic"
                    tools:ignore="PxUsage" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_rectangle_gray"
        android:gravity="center"
        android:text="@string/a52s_woa_helper"
        android:textColor="@color/white"
        android:textSize="40px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,PxUsage" />

    <ImageView
        android:id="@+id/HelpButton"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/round_rectangle_lightgray"
        android:clickable="true"
        android:contentDescription="settings"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:src="@drawable/help"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.08"
        tools:ignore="HardcodedText" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/version"
        android:textColor="@color/black"
        android:textSize="35px"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="PxUsage" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/github_repo"
        android:textColor="@color/black"
        android:textSize="38px"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="PxUsage" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_rectangle_lightgray"
        android:clickable="true"
        android:contentDescription="settings"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:src="@drawable/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.08"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>